Updated role and summary

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Acting Scrum Master and Off-shore team lead} % Job title
+    {Scrum Master (Off-shore team lead)} % Job title
     {Tata Consultancy Services (for American Express)} % Organization
     {Bangalore, India} % Location
     {Mar. 2018 - Mar. 2020} % Date(s)
