--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Solution driven junior scrum master with 4 years of experience in IT Service Management specifically in Access Management Platform. CSM certified and looking to work with product teams with Agile practices in Dubai.
+Solution driven Scrum Master with 4 years of experience in IT Service Management specifically in Access Management Platform. CSM certified and looking to work with product teams with Agile practices in Dubai.
 \end{cvparagraph}
