--- a/resume/award.tex
+++ b/resume/award.tex
@@ -57,7 +57,7 @@
 %---------------------------------------------------------
   \cvhonor
     {Certificate of Excellence} % Award
-    {Traffic analysis and gateway configuration to prevent attacks and vulnerabilities} % Event
+    {Traffic and gateway configuration to prevent attacks and vulnerabilities} % Event
     {2017} % Date(s)
     {} % Location
 
