--- a/resume/skill.tex
+++ b/resume/skill.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cvskill
     {Domains} % Category
-    {Project management, Release Management, IT Service Management, Authentication and Access Management, Team and capacity Management} % Skills
+    {Project management, Release Management, Banking, IT Service Management, Authentication and Access Management, Team and capacity Management} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Frameworks} % Category
-    {Scrum, Kanban, SDLC} % Skills
+    {Scrum, Kanban, Software Development Lifecycle (SDLC), Scrum of Scrums, familiar with LeSS} % Skills
 
 %---------------------------------------------------------
   \cvskill
@@ -27,7 +27,7 @@
 %---------------------------------------------------------
   \cvskill
     {Infrastructure} % Category
-    {Linux server management, certificate patching, network load balancing, log analysis and tracing, incident resolution} % Skills
+    {Linux server management, Certificate Patching, Network Load Balancing, Log Analysis and Tracing, Incident Resolution} % Skills
 
 %---------------------------------------------------------
   \cvskill
