--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Solution driven Scrum Master with 4 years of experience in IT Service Management specifically in Access Management Platform. CSM certified and looking to work with product teams with Agile practices in Dubai.
+I'm a solution driven Scrum Master with 4 years of experience in ITSM for Banking domain. I've led team on Access Management Platform, Incident Resolution and Infrastructure Capacity Planning fostering Agile Principles. I'm CSM® certified and looking to work on products and projects with challenging and interesting problem statement.
 \end{cvparagraph}
