--- a/snigdha-gupta-resume.tex
+++ b/snigdha-gupta-resume.tex
@@ -54,7 +54,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Snigdha}{Gupta}
-\position{Scrum Master{\enskip\cdotp\enskip}CSM Certified}
+\position{Certified Scrum Master (CSM®){\enskip\cdotp\enskip}Project Manager}
 \address{DIFC, Dubai, United Arab Emirates}
 
 \mobile{(+971) 56-917-2890}
