--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,15 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {Scrum Master (Off-shore team lead)} % Job title
+    {Scrum Master (project team lead)} % Job title
     {Tata Consultancy Services (for American Express)} % Organization
     {Bangalore, India} % Location
     {Mar. 2018 - Mar. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Organized and facilitated scrum ceremonies - daily standups, sprint planning, sprint review, and retrospective to deliver enhancements and new integrations for access management team.}
-        \item {Ran a kanban board to handle regular support activities in a first-in-first-out model for high velocity tasks.}
-        \item {Managed product backlog and release planning with product owners to ensure monthly and quarterly release cycles.}
+        \item {Ran a Kanban board to handle regular support activities in a first-in-first-out model for high velocity tasks.}
+        \item {Managed backlog and release planning with product owners to ensure monthly and quarterly release cycles.}
         \item {Technically ensure capacity planning for infrastructure by understanding performance of servers in current architecture.}
         \item {Technical reviewer for change management on environments to ensure minimal impact of changes on existing system architecture.}
       \end{cvitems}
